DB 接続情報を CDK 定義で取得する方法を実装。 ECS 上 Java が認識する CPU 数の設定を追加。